--- a/Assignments/assignment2/page2/index.html
+++ b/Assignments/assignment2/page2/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="box">
-            <img src="WhatsApp Image.jpg" alt="">
+            <img src="image.jpg" alt="">
             <h3>MD Naseer Uddin</h3>
             <p class="loc">Hyderabad, India</p>
             <p class="pos">"Front-end developer"</p>
